# DofusDataForge-project

./: .dockerignore  .env  .gitignore  Dockerfile.scraper  Dockerfile.streamlit  README.md  archimonsters_with_levels.csv  cloud.env  compose.yml  media_scraper.py  pyproject.toml  requirements-scraper.txt  requirements-streamlit.txt  requirements.txt
download/: archimonsters.csv  archimonsters.json
initdb/: schema.sql
script/: media_scraper.py
scripts/: app.py  config.py  dofus-scraping.py  dofus_scraping.py  global_media_scraper.py  media_scraper.py
scripts/utils/: logger.py
