[project]
name = "scraping-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "pandas>=2.3.1",
    "psycopg2-binary==2.9.10",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "streamlit>=1.47.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]
